<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    tools:context=".ui.login.MainActivity">

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.bibi.storyapp.customview.MyEditTextEmail
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/item_border"
        android:ems="10"
        android:hint="@string/email_desc"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:alpha="0"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <com.bibi.storyapp.customview.MyEditTextPassword
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/item_border"
        android:ems="10"
        android:hint="@string/password_desc"
        android:inputType="textPassword"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
        app:passwordToggleEnabled="true"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:alpha="0"
        android:backgroundTint="@color/palatinate_blue"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        tools:ignore="VisualLintButtonSize" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>