<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        tools:context=".ui.StoryActivity">

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/detail_border"
            android:contentDescription="@string/name"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_photo_camera_back_24"
            android:transitionName="photo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_gallery_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/img_preview"
            app:layout_constraintTop_toBottomOf="@+id/img_preview">

            <Button
                android:id="@+id/btn_gallery"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/palatinate_blue"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/gallery_button_label"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <Button
                android:id="@+id/btn_camera"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/palatinate_blue"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/camera_button_label"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_desc_and_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_gallery_camera">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/detail_border"
                android:gravity="top"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_160sdp"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_16sdp" />

            <Button
                android:id="@+id/btn_add_story"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:backgroundTint="@color/palatinate_blue"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/upload_button_label"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>